packages/kyvernoPolicies/chart/tests/vpol/restrict-capabilities-cel/kyverno-test/resource.yaml
###### Pods - Bad
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-add-sys-admin
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
    securityContext:
      capabilities:
        drop: ["ALL"]
        add: ["SYS_ADMIN"]
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-initcontainer-add-net-admin
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
    securityContext:
      capabilities:
        drop: ["ALL"]
        add: ["NET_BIND_SERVICE"]
  initContainers:
  - name: initcontainer01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
    securityContext:
      capabilities:
        drop: ["ALL"]
        add: ["NET_ADMIN"]
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-ephemeral-add-sys-admin
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
    securityContext:
      capabilities:
        drop: ["ALL"]
  ephemeralContainers:
  - name: debug01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
    securityContext:
      capabilities:
        drop: ["ALL"]
        add: ["SYS_ADMIN"]
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-multiple-add-mixed
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
    securityContext:
      capabilities:
        drop: ["ALL"]
        add: ["NET_BIND_SERVICE", "SYS_ADMIN"]
---
###### Pods - Good
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-no-securitycontext
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-no-capabilities
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
    securityContext:
      runAsNonRoot: true
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-empty-add
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
    securityContext:
      capabilities:
        drop: ["ALL"]
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-add-allowed
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
    securityContext:
      capabilities:
        drop: ["ALL"]
        add: ["NET_BIND_SERVICE"]
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-add-allowed-all-container-types
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
    securityContext:
      capabilities:
        drop: ["ALL"]
        add: ["NET_BIND_SERVICE"]
  initContainers:
  - name: initcontainer01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
    securityContext:
      capabilities:
        drop: ["ALL"]
        add: ["NET_BIND_SERVICE"]
  ephemeralContainers:
  - name: debug01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
    securityContext:
      capabilities:
        drop: ["ALL"]
        add: ["NET_BIND_SERVICE"]
---
###### Deployments - Bad
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment-add-sys-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
        securityContext:
          capabilities:
            drop: ["ALL"]
            add: ["SYS_ADMIN"]
---
###### Deployments - Good
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment-add-allowed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
        securityContext:
          capabilities:
            drop: ["ALL"]
            add: ["NET_BIND_SERVICE"]
